--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="logo_container">
-                <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo">
+                <img src="img/logo.png" alt="logo">
             </div>
 
             <nav>
@@ -25,16 +25,16 @@
                     <li><a href="about.html">about</a></li>
                 </ul>
                 <button class="btn">
-                    <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu">
+                    <img src="img/cart.png" alt="shopping cart">
                 </button>
             </nav>
 
         </header>
 
         <main>
-            <header class="page_header">
+            <div class="page_header">
                 <h1>about us</h1>
-            </header>
+            </div>
 
             <section class="info_pic">
                 <div class="text">
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="picture">
-                    <img src="https://image-placeholder.com/images/actual-size/200x200.png" alt="about">
-                    <!-- float to right -->
+                    <!-- <img src="https://image-placeholder.com/images/actual-size/200x200.png" alt="about"> -->
+                    <img src="img/about.jpg" alt="about image"> <!-- float to right -->
                 </div>
             </section>
 
@@ -64,13 +64,21 @@
 
         <footer>
             <ul>
-                <li>connect with us!</li>
+                <li>
+                    <img src="img/mail.png" alt="email contact">
+                </li>
 
-                <li><a href="emailurl">email</a></li>
+                <li>
+                    <img src="img/call.png" alt="phone number">
+                </li>
 
-                <li>number</li>
+                <li>
+                    <img src="img/insta.png" alt="instagram">
+                </li>
 
-                <li><a href="instagramlink">instagram</a></li>
+                <li>
+                    <img src="img/fb.png" alt="facebook">
+                </li>
             </ul>
         </footer>
     </section>
