--- a/accessory.html
+++ b/accessory.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="logo_container">
-                <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo">
+                <img src="img/logo.png" alt="logo">
             </div>
 
             <nav>
@@ -25,45 +25,46 @@
                     <li><a href="about.html">about</a></li>
                 </ul>
                 <button class="btn">
-                    <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu">
+                    <img src="img/cart.png" alt="shopping cart">
                 </button>
             </nav>
         </header>
 
         <main>
-            <header class="page_header">
+            <div class="page_header">
                 <h1>accessories</h1>
-            </header>
+            </div>
 
             <!-- first row of products -->
             <div class="product-row">
                 <div class="row">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/acc_a.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">a</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_b.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">b</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_c.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">c</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_d.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">d</p>
                     </div>
                 </div>
                 <div class="shelf">
-                    <div class="shelf-tag">#1</div>
+                    <div class="shelf-tag">canister cases</div>
                 </div>
             </div>
 
@@ -71,37 +72,37 @@
             <div class="product-row">
                 <div class="row_two">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_e.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">e</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_f.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">f</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_g.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">g</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/acc_h.png" alt="acc">
                         <button class="btn"></button>
                         <p class="product-name">h</p>
                     </div>
                 </div>
                 <div class="shelf">
-                    <div class="shelf-tag">#2</div>
+                    <div class="shelf-tag">camera straps</div>
                 </div>
             </div>
 
 
             <!-- third row of products -->
-            <div class="product-row">
+            <!-- <div class="product-row">
                 <div class="row_three">
                     <div class="column">
                         <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
@@ -130,7 +131,7 @@
                 <div class="shelf">
                     <div class="shelf-tag">#3</div>
                 </div>
-            </div>
+            </div> -->
 
 
 
