--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="logo_container">
-                <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo">
+                <img src="img/logo.png" alt="logo">
             </div>
 
             <nav>
@@ -25,39 +25,39 @@
                     <li><a href="about.html">about</a></li>
                 </ul>
                 <button class="btn">
-                    <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu">
+                    <img src="img/cart.png" alt="shopping cart">
                 </button>
             </nav>
         </header>
 
         <main>
-            <header class="page_header">
+            <div class="page_header">
                 <h1>gallery</h1>
-            </header>
+            </div>
 
             <!-- first row of products -->
             <div class="product-row">
                 <div class="row">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_a.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">a</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_b.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">b</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_c.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">c</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_d.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">d</p>
                     </div>
@@ -71,13 +71,13 @@
             <div class="product-row">
                 <div class="row_two">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_e.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">e</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_f.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">f</p>
                     </div>
@@ -133,7 +133,9 @@
             </div>
 
             <div class="tips">
-                <button class="btn">tips</button>
+                <button class="btn">
+                    <img src="img/tips.png" alt="tip button">
+                </button>
             </div>
         </main>
     </section>
