--- a/home.html
+++ b/home.html
@@ -13,7 +13,8 @@
 
         <header>
             <div class="logo_container">
-                <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo">
+                <!-- <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo"> -->
+                <img src="img/logo.png" alt="logo">
             </div>
 
             <nav>
@@ -25,22 +26,45 @@
                     <li><a href="about.html">about</a></li>
                 </ul>
                 <button class="btn">
-                    <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu">
+                    <!-- <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu"> -->
+                    <img src="img/cart.png" alt="shopping cart">
                 </button>
             </nav>
         </header>
 
         <main>
-            <header class="home_header">
+            <div class="home_header">
                 <h1>store name</h1>
-            </header>
+            </div>
 
             <!-- <img class="background"> -->
             <div class="home_background">
-                <img src="https://image-placeholder.com/images/actual-size/1136x640.png" alt="home">
+                <!-- <img src="https://image-placeholder.com/images/actual-size/1136x640.png" alt="home"> -->
+                <img src="img/home2.jpg" alt="background image">
             </div>
 
         </main>
+
+        <footer>
+            <ul>
+                <li>
+                    <img src="img/mail.png" alt="email contact">
+                </li>
+
+                <li>
+                    <img src="img/call.png" alt="phone number">
+                </li>
+
+                <li>
+                    <img src="img/insta.png" alt="instagram">
+                </li>
+
+                <li>
+                    <img src="img/fb.png" alt="facebook">
+                </li>
+            </ul>
+        </footer>
+
     </section>
 </body>
 
