--- a/stock.html
+++ b/stock.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="logo_container">
-                <img src="https://via.placeholder.com/50x50/333/fff?text=L" alt="Logo">
+                <img src="img/logo.png" alt="logo">
             </div>
 
             <nav>
@@ -25,45 +25,49 @@
                     <li><a href="about.html">about</a></li>
                 </ul>
                 <button class="btn">
-                    <img src="https://via.placeholder.com/20x20/333/fff?text=☰" alt="Menu">
+                    <img src="img/cart.png" alt="shopping cart">
                 </button>
             </nav>
         </header>
 
         <main>
-            <header class="page_header">
+            <div class="page_header">
                 <h1>film stock</h1>
-            </header>
+            </div>
 
             <!-- first row of products -->
             <div class="product-row">
                 <div class="row">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_a.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">a</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_b.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">b</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_c.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">c</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_d.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">d</p>
                     </div>
                 </div>
                 <div class="shelf">
-                    <div class="shelf-tag">#1</div>
+                    <div class="shelf-tag">color negatives</div>
                 </div>
             </div>
 
@@ -71,31 +75,35 @@
             <div class="product-row">
                 <div class="row_two">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_e.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">e</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_f.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">f</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_g.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">g</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_h.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">h</p>
                     </div>
                 </div>
                 <div class="shelf">
-                    <div class="shelf-tag">#2</div>
+                    <div class="shelf-tag">black & white negatives</div>
                 </div>
             </div>
 
@@ -104,31 +112,34 @@
             <div class="product-row">
                 <div class="row_three">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_i.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">i</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_j.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">j</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
+                        <img src="img/film_k.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">k</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/film_l.png" alt="film roll">
                         <button class="btn"></button>
                         <p class="product-name">l</p>
                     </div>
                 </div>
                 <div class="shelf">
-                    <div class="shelf-tag">#3</div>
+                    <div class="shelf-tag">staff picks</div>
                 </div>
             </div>
 
