--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/xfa3gtk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bvq1khf.css">
 </head>
 
 <body>
@@ -38,19 +41,32 @@
 
             <section class="info_pic">
                 <div class="text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lobortis, tortor suscipit
-                        gravida
-                        rutrum, velit justo mattis felis, eu hendrerit dui nunc at nisl. Mauris est nisl, aliquam eu
-                        nulla
-                        ac, congue euismod arcu. Cras vel turpis odio. Etiam eu sagittis augue, in fermentum lacus.
-                        Integer
-                        euismod, leo at volutpat pulvinar, orci metus tristique lacus, sed rutrum lacus neque et velit.
-                        Integer varius facilisis tempus. Vestibulum a ex sed elit lacinia facilisis a ac metus. Sed
-                        faucibus
-                        ligula a congue accumsan. Praesent non est diam. Vivamus ac ipsum massa.
+                    <p>Welcome to Exposur,where film photography meets simplicity and affordability. We provide
+                        budget-friendly film essentials and accessories, along with easy tips to help beginners navigate
+                        the world of film photography. Whether you're just starting out or exploring new styles, we make
+                        it fun and easy to capture your world on film.
+                        <br><br>
+                        Connect with us on our socials!
 
-                        Ut fermentum mattis lectus, ut blandit ex blandit nec. Fusce id sodales lacus, vitae tristique
-                        purus. Morbi consectetur ligula at erat dictum, eu semper justo consectetur.
+                    <footer class="footer_about">
+                        <ul>
+                            <li>
+                                <img src="img/mail.png" alt="email contact">
+                            </li>
+
+                            <li>
+                                <img src="img/call.png" alt="phone number">
+                            </li>
+
+                            <li>
+                                <img src="img/insta.png" alt="instagram">
+                            </li>
+
+                            <li>
+                                <img src="img/fb.png" alt="facebook">
+                            </li>
+                        </ul>
+                    </footer>
                     </p>
                 </div>
 
@@ -62,7 +78,7 @@
 
         </main>
 
-        <footer>
+        <!-- <footer>
             <ul>
                 <li>
                     <img src="img/mail.png" alt="email contact">
@@ -80,7 +96,7 @@
                     <img src="img/fb.png" alt="facebook">
                 </li>
             </ul>
-        </footer>
+        </footer> -->
     </section>
 
 
