--- a/accessory.html
+++ b/accessory.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>accessories</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/xfa3gtk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bvq1khf.css">
 </head>
 
 <body>
@@ -42,25 +45,25 @@
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/acc_a.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">a</p>
+                        <p class="product-name">silver metal case</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_b.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">b</p>
+                        <p class="product-name">black metal case</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_c.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">c</p>
+                        <p class="product-name">black leather case</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_d.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">d</p>
+                        <p class="product-name">brown leather case</p>
                     </div>
                 </div>
                 <div class="shelf">
@@ -74,25 +77,25 @@
                     <div class="column">
                         <img src="img/acc_e.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">e</p>
+                        <p class="product-name">leather wrist strap</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_f.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">f</p>
+                        <p class="product-name">metal wrist strap</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_g.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">g</p>
+                        <p class="product-name">gray neck strap</p>
                     </div>
 
                     <div class="column">
                         <img src="img/acc_h.png" alt="acc">
                         <button class="btn"></button>
-                        <p class="product-name">h</p>
+                        <p class="product-name">flower neck strap</p>
                     </div>
                 </div>
                 <div class="shelf">
