--- a/stock.html
+++ b/stock.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stock</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/xfa3gtk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bvq1khf.css">
 </head>
 
 <body>
@@ -32,7 +35,7 @@
 
         <main>
             <div class="page_header">
-                <h1>film stock</h1>
+                <h1>Film Stock</h1>
             </div>
 
             <!-- first row of products -->
@@ -42,28 +45,28 @@
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_a.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">a</p>
+                        <p class="product-name">fujifilm C200 roll</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_b.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">b</p>
+                        <p class="product-name">kodak color+ 200</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_c.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">c</p>
+                        <p class="product-name">kodak gold 200</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_d.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">d</p>
+                        <p class="product-name">fujicolor pro 400H</p>
                     </div>
                 </div>
                 <div class="shelf">
@@ -78,28 +81,28 @@
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_e.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">e</p>
+                        <p class="product-name">ilford HP5 400</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_f.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">f</p>
+                        <p class="product-name">agfa photo APX 400</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_g.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">g</p>
+                        <p class="product-name">kodak tri-x 400</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_h.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">h</p>
+                        <p class="product-name">ilford delta 100 pro</p>
                     </div>
                 </div>
                 <div class="shelf">
@@ -115,27 +118,27 @@
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_i.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">i</p>
+                        <p class="product-name">kodak ektar 100</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_j.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">j</p>
+                        <p class="product-name">fomapan 400</p>
                     </div>
 
                     <div class="column">
                         <!-- <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll"> -->
                         <img src="img/film_k.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">k</p>
+                        <p class="product-name">lomography color negative 400</p>
                     </div>
 
                     <div class="column">
                         <img src="img/film_l.png" alt="film roll">
                         <button class="btn"></button>
-                        <p class="product-name">l</p>
+                        <p class="product-name">kodak ultra max 400</p>
                     </div>
                 </div>
                 <div class="shelf">
