--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gallery</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/xfa3gtk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bvq1khf.css">
 </head>
 
 <body>
@@ -41,25 +44,25 @@
                     <div class="column">
                         <img src="img/gallery_a.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">a</p>
+                        <p class="product-name">kodak gold 200</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_b.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">b</p>
+                        <p class="product-name">kodak gold 200</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_c.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">c</p>
+                        <p class="product-name">fujifilm 200</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_d.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">d</p>
+                        <p class="product-name">fujifilm 200</p>
                     </div>
                 </div>
                 <div class="shelf">
@@ -83,13 +86,13 @@
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_g.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">g</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_h.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">h</p>
                     </div>
@@ -104,27 +107,27 @@
             <div class="product-row">
                 <div class="row_three">
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_i.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">i</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_j.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">j</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_k.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
                         <p class="product-name">k</p>
                     </div>
 
                     <div class="column">
-                        <img src="https://via.placeholder.com/150x120/ff6b6b/fff?text=A" alt="Film Roll">
+                        <img src="img/gallery_l.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">l</p>
+                        <p class="product-name">cinestill 400D</p>
                     </div>
                 </div>
                 <div class="shelf">
