--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="https://use.typekit.net/xfa3gtk.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bvq1khf.css">
 </head>
 
 <body>
@@ -32,9 +35,9 @@
             </nav>
         </header>
 
-        <main>
+        <main class="mainhome">
             <div class="home_header">
-                <h1>store name</h1>
+                <h1>exposur, for all.</h1>
             </div>
 
             <!-- <img class="background"> -->
