--- a/gallery.html
+++ b/gallery.html
@@ -76,25 +76,25 @@
                     <div class="column">
                         <img src="img/gallery_e.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">e</p>
+                        <p class="product-name">fujicolor pro 400H</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_f.JPG" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">f</p>
+                        <p class="product-name">kodak ultra max 400</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_g.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">g</p>
+                        <p class="product-name">kodak ektar 100</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_h.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">h</p>
+                        <p class="product-name">kodak colorplus 200</p>
                     </div>
                 </div>
                 <div class="shelf">
@@ -109,19 +109,19 @@
                     <div class="column">
                         <img src="img/gallery_i.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">i</p>
+                        <p class="product-name">lomography color negative 400</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_j.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">j</p>
+                        <p class="product-name">kodak porta 400</p>
                     </div>
 
                     <div class="column">
                         <img src="img/gallery_k.jpg" alt="film pic">
                         <!-- <button class="btn"></button> -->
-                        <p class="product-name">k</p>
+                        <p class="product-name">kodak porta 400</p>
                     </div>
 
                     <div class="column">
